--- a/styles/website.css
+++ b/styles/website.css
@@ -9,3 +9,9 @@
 .book .book-body .page-wrapper {
   margin-bottom: 12em;
 }
+
+img {
+  display: block;
+   margin-left: auto;
+   margin-right: auto;
+}
