--- a/styles/website.css
+++ b/styles/website.css
@@ -28,3 +28,25 @@ img.center {
 #book-search-input input, #book-search-input input:focus, #book-search-input input:hover{
   color: #222;
 }
+
+@media print {
+	/* Hide side bar */
+	.book-summary {
+		display: none;
+	}
+
+	/*Hide top bar*/
+	.book-header {
+		display: none;
+	}
+
+	/*Hide left and right navigation arrows*/
+	.navigation {
+		display: none;
+	}
+	
+	/*Make sure all content is displayed and not just the first page*/
+	.book-body {
+		position: static;
+	}
+}
